S commit v1.2 fixes to overflow

--- a/Reviews/style4.css
+++ b/Reviews/style4.css
@@ -25,7 +25,7 @@ text-align:center;
 {
 
 width:900px;
-height:900px;
+height:600px;
 background:yellow;
 position:relative;
 left:140px
@@ -34,14 +34,14 @@ left:140px
 {
 float:left;
 width:200px;
-height:900px;
+height:600px;
 background:orange;
 }
 #main
 {
 float:right;
 width:700px;
-height:900px;
+height:600px;
 background:lime;
 overflow:scroll;
 }
